vlib/v/checker/tests/nested_aliases.out
vlib/v/checker/tests/nested_aliases.vv:2:16: error: type `MyInt` is an alias, use the original alias type `int` instead
    1 | type MyInt = int
    2 | type MyMyInt = MyInt
      |                ~~~~~
