vlib/v/checker/tests/nested_aliases.vv
type MyInt = int
type MyMyInt = MyInt
